# openplcproject.webserver

backend/: Cargo.toml  README.md  Rocket.toml  openplc.db  openplc.db-shm  openplc.db-wal  sqlite3.lib
backend/db/migrations/20220101000000_create_v3_tables/: down.sql  up.sql
backend/src/: devices.rs  hardware.rs  main.rs  plc.rs  programs.rs  response.rs  schema.rs  settings.rs  sqlite.rs  state.rs  users.rs  variables.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: ActionButton.tsx  App.tsx  ConfirmDialog.tsx  Dashboard.tsx  DeleteButton.tsx  DeviceEditDialog.tsx  FileControl.tsx  FileDisplay.tsx  Hardware.tsx  Header.tsx  Logs.tsx  ModbusDevices.tsx  Monitoring.tsx  ProgramUploadControl.tsx  Programs.tsx  QueryStatus.tsx  Settings.tsx  StateBadge.tsx  StateControl.tsx  Timestamp.tsx  UserEditDialog.tsx  Users.tsx  VariableEditDialog.tsx  api.tsx  index.tsx  theme.ts
frontend/src/model/: DeviceDefinitions.ts  ModbusDevice.tsx  Program.tsx  RuntimeSettings.tsx  State.tsx  User.tsx  Variable.tsx
