[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.5.2"

chrono = { version = "0.4.19", features = ["serde"] }

rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_sqlite_pool"]}
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"